Fixes weird image spacing in Activity Log transition flow view

--- a/client/my-sites/stats/activity-log-switch/style.scss
+++ b/client/my-sites/stats/activity-log-switch/style.scss
@@ -89,6 +89,7 @@
 
 .activity-log-switch__img {
 	max-width: 33%;
+	max-height: 110px;
 	box-sizing: border-box;
 
 	@include breakpoint( "<960px" ) {
@@ -100,11 +101,11 @@
 	}
 
 	&.is-backup {
-		padding: 8%;
+		padding: 0 8%;
 	}
 
 	&.is-security-issue {
-		padding: 4%;
+		padding: 0 4%;
 	}
 }
 
